<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>br.net.fabiozumbi12.UltimateChat</groupId>
  <artifactId>UltimateChat</artifactId>
  <packaging>pom</packaging>
  <name>UltimateChat</name>
  <version>1.8.6</version>
  <description>Ultimate Chat is an advanced chat hooking into most used plugins to show more info on player chat.</description>

  <!-- Jedis -->
  <dependencies>
    <dependency>
      <groupId>redis.clients</groupId>
      <artifactId>jedis</artifactId>
      <version>2.9.0</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-pool2</artifactId>
      <version>2.4.2</version>
    </dependency>
  </dependencies>
  
  <repositories>
    <!-- Sponge repos -->
    <repository>
        <id>sponge-maven-repo</id>
        <name>Sponge maven repo</name>
        <url>http://repo.spongepowered.org/maven</url>
        <releases>
            <enabled>true</enabled>
        </releases>
        <snapshots>
            <enabled>true</enabled>
        </snapshots>
    </repository>

      <repository>
          <id>nucleus-api</id>
          <url>http://repo.drnaylor.co.uk/artifactory/list/minecraft</url>
      </repository>

      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
     
    <!-- Spigot repos -->
    <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
     </repository>
     <repository>
            <id>vault-repo</id>
            <url>https://nexus.keyle.de/content/groups/public/</url>
        </repository>
     <repository>
            <id>placeholderapi</id>
            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
     </repository>
     <repository>
            <id>dmulloy2-repo</id>
            <url>http://repo.dmulloy2.net/content/groups/public/</url>
     </repository>  
     
     <!-- Bungee repo -->
     <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </repository>    
     
     <!-- JDA repo -->
     <repository>
            <id>jcenter</id>
            <name>jcenter-bintray</name>
            <url>http://jcenter.bintray.com</url>
     </repository>     
     
     <!-- Essentials repo -->
     <repository>
            <id>EssentialsX</id>
            <url>http://repo.ess3.net/content/groups/essentials</url>
     </repository> 
     
     <!-- Marriage repo -->
     <repository>
            <id>Marriage</id>
            <url>https://ci.lucko.me/plugin/repository/everything</url>
     </repository>

  </repositories>
  
  <scm>
     <connection>scm:git:git@github.com:FabioZumbi12/UltimateChat.git</connection>
     <developerConnection>scm:git:git@github.com:FabioZumbi12/UltimateChat.git</developerConnection>
     <url>https://github.com/FabioZumbi12/UltimateChat/tree/master</url>
     <tag>${project.artifactId}</tag>
  </scm>
  
  <!-- maven site -->
  <distributionManagement>
    <repository>
        <id>internal.repo</id>
        <name>Temporary Staging Repository</name>
        <url>file://${project.build.directory}/mvn-repo</url>
    </repository>
  </distributionManagement>
  
  <build>
    <finalName>${project.name}-${project.version}</finalName>
    <resources>
        <resource>
            <targetPath>.</targetPath>
            <filtering>true</filtering>
            <directory>src/main/resources/</directory>
        </resource>
    </resources>
  
    <plugins>
    
    <!-- Parse Version to plugin.yml -->
      <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.10</version>
          <executions>
              <execution>
                  <id>parse-version</id>
                  <goals>
                      <goal>parse-version</goal>
                  </goals>
              </execution>
          </executions>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>        
      </plugin>
      
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>templating-maven-plugin</artifactId>
        <version>1.0.0</version>
            <executions>
               <execution>
                  <id>filter-src</id>
                    <goals>
                      <goal>filter-sources</goal>
                    </goals>
               </execution>
            </executions>
      </plugin>
      
      <!-- Deploy to github for maven repo -->
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.1</version>
        <configuration>
            <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
        </configuration>
      </plugin>
      
      <plugin>
            <groupId>com.github.github</groupId>
            <artifactId>site-maven-plugin</artifactId>
            <version>0.12</version>
            <configuration>                
                <noJekyll>true</noJekyll>     
                <message>Maven artifacts for ${project.artifactId} ${project.version}</message>                            
                <merge>true</merge>
                <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> 
                <branch>refs/heads/mvn-repo</branch>                      
                <includes><include>**/*</include></includes>
                <repositoryName>UltimateChat</repositoryName>     
                <repositoryOwner>FabioZumbi12</repositoryOwner>   
            </configuration>
            <executions>            
              <execution>
                <id>deploying</id>
                <goals>
                  <goal>site</goal>
                </goals>
                <phase>deploy</phase>
              </execution>
            </executions>
        </plugin>
    </plugins>
   </build>   
   <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <github.global.server>github-user</github.global.server>        
   </properties>
  <modules>
      <module>UltimateChat-JDA</module>
      <module>UltimateChat-Spigot</module>
      <module>UltimateChat-Bungee</module>
      <module>UltimateChat-Sponge-56</module>
      <module>UltimateChat-Sponge-78</module>
  </modules>
</project>